--- a/requirements.txt
+++ b/requirements.txt
@@ -7,10 +7,9 @@ wget
 starlette
 openpyxl
 img2pdf
-pymorphy3
 pytrovich
 python-dotenv
 argon2-cffi
 slowapi
 fast_captcha
-cryptorgaphy
+cryptography
