--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,11 @@
-fastapi
-pymongo
-pydantic
+fastapi==0.89.1
+pymongo==4.6.1
+pydantic==1.10.14
 uvicorn
 python-docx
-wget
-starlette
-openpyxl
+starlette==0.22.0
 img2pdf
+pdf2image
 pytrovich
 python-dotenv
 argon2-cffi
