--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/tastydata0/VKR#readme",
   "devDependencies": {
     "css-loader": "^7.0.0",
+    "mini-css-extract-plugin": "^2.9.0",
     "style-loader": "^3.3.4",
     "webpack": "^5.91.0",
     "webpack-cli": "^5.1.4"
